--- a/ProyectoIntegrador/ProyectoIntegrador.csproj
+++ b/ProyectoIntegrador/ProyectoIntegrador.csproj
@@ -4,7 +4,7 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{93C5BFD3-3914-4911-B169-27666EF8F7FB}</ProjectGuid>
+    <ProjectGuid>{3442DB59-5E89-402F-9B76-05814B1687D4}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <RootNamespace>ProyectoIntegrador</RootNamespace>
     <AssemblyName>ProyectoIntegrador</AssemblyName>
@@ -43,11 +43,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Cliente.cs" />
-    <Compile Include="Elemento.cs" />
+    <Compile Include="Alumno.cs" />
+    <Compile Include="Asignatura.cs" />
+    <Compile Include="AsignaturaCursada.cs" />
+    <Compile Include="Carrera.cs" />
+    <Compile Include="Persona.cs" />
+    <Compile Include="Profesor.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Recibo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
